--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Session & Prefix
-SESSION_ID=
+SESSION_ID=KSMD~Q3lwhLiS#D2jn-J58vN5a67VtURQ4-a-QnW5HXfYE7Cj0pMp0S10
 PREFIX=.
 
 # Branding & Captions
