--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -3,10 +3,10 @@ name: Node.js CI
   on:
     push:
       branches:
-        - V-2
+        - main
     pull_request:
       branches:
-        - V-2
+        - main
   
   jobs:
     build:
