--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,10 +3,11 @@ name: Node.js CI
   on:
     push:
       branches:
-        - main
+        - V-2
+        - release/*
     pull_request:
       branches:
-        - main
+        - V-2
   
   jobs:
     build:
