--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Session & Prefix
-SESSION_ID=KSMD~Q3lwhLiS#D2jn-J58vN5a67VtURQ4-a-QnW5HXfYE7Cj0pMp0S10
+SESSION_ID=KSMD~YylBgBDC#6T8ha17QmrBsX_S8_heHOgLN47WRhIQlksIr-Z90Z3E
 PREFIX=.
 
 # Branding & Captions
