--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Session & Prefix
-SESSION_ID=KSMD~YylBgBDC#6T8ha17QmrBsX_S8_heHOgLN47WRhIQlksIr-Z90Z3E
+SESSION_ID=KSMD~Nu8BEDJI#1tHnhBL7hf76dL4dy_hRq7hRR0Oc8RguZ_iYA7ZY6AI
 PREFIX=.
 
 # Branding & Captions
