--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Session & Prefix
-SESSION_ID=KSMD~Nu8BEDJI#1tHnhBL7hf76dL4dy_hRq7hRR0Oc8RguZ_iYA7ZY6AI
+SESSION_ID=KSMD~Q3lwhLiS#D2jn-J58vN5a67VtURQ4-a-QnW5HXfYE7Cj0pMp0S10
 PREFIX=.
 
 # Branding & Captions
