--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@mrnima/tiktok-downloader": "1.0.0",
     "@mrnima/facebook-downloader": "1.0.0",
     "mrnima-moviedl": "1.0.0",
-    "torrent-search-api": "^2.3.8",
+    "torrent-search-api": "latest",
     "webtorrent": "2.6.10",
     "nodejs-file-downloader": "^4.9.4"
   }
