--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Node.js CI
 
 on:
-  schedule:
-    - cron: "0 */3 * * *"   # every 3 hours
-  workflow_dispatch:        # manual trigger
   push:
+    branches:
+      - V-2
+  pull_request:
     branches:
       - V-2
 
