--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "@dark-yasiya/scrap":"1.0.1",    
     "pino": "^7.0.5",
+    "jimp": "1.6.0",
     "pm2": "^6.0.5",
     "util": "^0.12.4",
     "express": "latest",
